--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="et.com.synctech.mobileappexam">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
+        android:name="com.orm.SugarApp"
         android:icon="@drawable/ic_launcher_background"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher_background"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:replace="android:icon,android:theme">
+        tools:replace="android:icon,android:theme"
+        tools:ignore="GoogleAppIndexingWarning">
+
+        <meta-data android:name="DATABASE" android:value="sugar_az_exam.db" />
+        <meta-data android:name="VERSION" android:value="1" />
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="et.com.synctech.mobileappexam.dto" />
+
         <activity android:name=".activity.EmployeeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
